added code from class today

--- a/arpeggio.html
+++ b/arpeggio.html
@@ -41,6 +41,7 @@
   }
   
   function toggle () {
+    Tone.start()
     if (Tone.Transport.state === 'started') {
       Tone.Transport.stop()
     } else {
