alec: added effects to thumbsticks

--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -11,4 +11,4 @@
   <img id="khaled" src="../samples/dj-khaled-dancing.gif" style="opacity:0;">
 </p>
 
-<script src="experiment.js"></script>
+<script type="module" src="experiment.js"></script>
