alec: updating from last week's class

--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -8,6 +8,16 @@
 <button id="stopButton">stop</button>
 <button id="enableTone">enable audio</button>
 <p>
+  <div>
+    <label for="tempo">tempo:</label>
+    <input id="tempo" type="range">
+  </div><br>
+  <div>
+    <label for="volume">volume:</label>
+    <input id="volume" type="range">
+  </div>
+</p>
+<p>
   <img id="khaled" src="../samples/dj-khaled-dancing.gif" style="opacity:0;">
 </p>
 
