--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -1,12 +1,17 @@
 <!-- <script src="experiment.js"></script> -->
 <script src="https://cdn.jsdelivr.net/gh/netizenorg/netnet-standard-library/build/nn.min.js"></script>
 <script src="https://tonejs.github.io/build/Tone.js"></script>
+<script src="scales.js"></script>
+<script src="node_modules/gamepad.js/gamepad.js"></script>
+<script>const { GamepadListener } = gamepad;</script>
 
 <h1>Hello. Press some buttons.</h1>
 
 <button id="startButton">start</button>
 <button id="stopButton">stop</button>
 <button id="enableTone">enable audio</button>
+<button id="randomize">randomize scale</button>
+<input id="play-pause" type="checkbox">
 <p>
   <div>
     <label for="tempo">tempo:</label>
