--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -1,4 +1,5 @@
 <!-- <script src="experiment.js"></script> -->
+<link rel="stylesheet" href="index.css">
 <script src="https://cdn.jsdelivr.net/gh/netizenorg/netnet-standard-library/build/nn.min.js"></script>
 <script src="https://tonejs.github.io/build/Tone.js"></script>
 <script src="scales.js"></script>
@@ -7,11 +8,25 @@
 
 <h1>Hello. Press some buttons.</h1>
 
+<p>
 <button id="startButton">start</button>
 <button id="stopButton">stop</button>
 <button id="enableTone">enable audio</button>
 <button id="randomize">randomize scale</button>
-<input id="play-pause" type="checkbox">
+<input id="play-pause" type="checkbox"><br>
+</p>
+
+<!-- https://www.w3schools.com/howto/howto_css_dropdown.asp -->
+<div class="dropdown">
+  <button class="dropbtn">Key Select</button>
+  <div class="dropdown-content">
+    <!-- <button id="keyC">C</button> -->
+    <a href="javascript:void(0);" onclick="changeKey('C')">Link 1</a>
+    <a href="javascript:void(0);" onclick="changeKey('D')">Link 2</a>
+    <a href="javascript:void(0);" onclick="changeKey('E')">Link 3</a>
+  </div>
+</div>
+
 <p>
   <div>
     <label for="tempo">tempo:</label>
