alec: added melody length control

--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -29,11 +29,11 @@
 
 <p>
   <div>
-    <label for="tempo">tempo:</label>
-    <input id="tempo" type="range">
+    <label for="noteCount">melody length:</label><br>
+    <input id="noteCount" type="range" value="16" min="16" max="256" step="8">
   </div><br>
   <div>
-    <label for="volume">volume:</label>
+    <label for="volume">volume:</label><br>
     <input id="volume" type="range">
   </div>
 </p>
