alec: added tempo control

--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -33,6 +33,15 @@
     <input id="noteCount" type="range" value="16" min="16" max="256" step="8">
   </div><br>
   <div>
+    <label for="arpegg">arpeggio quantity:</label><br>
+    <input id="arpegg" type="range" value="4" min="0" max="9" step="1">
+  </div><br>
+  <div>
+    <label for="tempo">base tempo:</label><br>
+    <input id="tempo" type="range" value="90" min="50" max="200" step="1">
+    <button id="tempoReset">reset tempo</button>
+  </div><br>
+  <div>
     <label for="volume">volume:</label><br>
     <input id="volume" type="range">
   </div>
