--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -31,10 +31,12 @@
   <div>
     <label for="noteCount">melody length:</label><br>
     <input id="noteCount" type="range" value="16" min="16" max="256" step="8">
+    <button id="noteCountReset">reset melody length</button>
   </div><br>
   <div>
     <label for="arpegg">arpeggio quantity:</label><br>
     <input id="arpegg" type="range" value="4" min="0" max="9" step="1">
+    <button id="arpeggReset">reset arpeggios</button>
   </div><br>
   <div>
     <label for="tempo">base tempo:</label><br>
@@ -42,8 +44,9 @@
     <button id="tempoReset">reset tempo</button>
   </div><br>
   <div>
-    <label for="volume">volume:</label><br>
-    <input id="volume" type="range">
+    <label for="volume">base volume:</label><br>
+    <input id="volume" type="range" value="0.5" min="0" max="2" step="0.05">
+    <button id="volumeReset">reset volume</button>
   </div>
 </p>
 <p>
