alec: more sophisticated note length chooser with weighted probability

--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -29,7 +29,7 @@
 
 <p>
   <div>
-    <label for="noteCount">melody length:</label><br>
+    <label for="noteCount">melody length (applies to new scales):</label><br>
     <input id="noteCount" type="range" value="16" min="16" max="256" step="8">
     <button id="noteCountReset">reset melody length</button>
   </div><br>
