alec: adding key select dropdown

--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -27,6 +27,22 @@
   </div>
 </div>
 
+<label for="keys">Choose a key:</label>
+<select id="keys" name="Key select">
+  <option value="keyC">C</option>
+  <option value="keyG">G</option>
+  <option value="keyD">D</option>
+  <option value="keyA">A</option>
+  <option value="keyE">E</option>
+  <option value="keyB">B</option>
+  <option value="keyGb">G♭/F♯</option>
+  <option value="keyDb">D♭/C♯</option>
+  <option value="keyAb">A♭</option>
+  <option value="keyEb">E♭</option>
+  <option value="keyBb">B♭</option>
+  <option value="keyF">F</option>
+</select>
+
 <p>
   <div>
     <label for="noteCount">melody length (applies to new scales):</label><br>
