alec: more dropdowns

--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -16,23 +16,32 @@
 <input id="play-pause" type="checkbox"><br>
 </p>
 
-<p>
+<form>
 <label for="keys">Choose a key:</label>
 <select id="keys" name="Key select">
-  <option value="keyC">C</option>
-  <option value="keyG">G</option>
-  <option value="keyD">D</option>
-  <option value="keyA">A</option>
-  <option value="keyE">E</option>
-  <option value="keyB">B</option>
+  <option value="keyC" >C</option>
+  <option value="keyG" >G</option>
+  <option value="keyD" >D</option>
+  <option value="keyA" >A</option>
+  <option value="keyE" >E</option>
+  <option value="keyB" >B</option>
   <option value="keyGb">G♭/F♯</option>
   <option value="keyDb">D♭/C♯</option>
   <option value="keyAb">A♭</option>
   <option value="keyEb">E♭</option>
   <option value="keyBb">B♭</option>
-  <option value="keyF">F</option>
+  <option value="keyF" >F</option>
+</select><br><br>
+<label for="octaves">Choose an octave:</label>
+<select id="octaves" name="Octave select">
+  <option value="octave1">1</option>
+  <option value="octave2">2</option>
+  <option value="octave3">3</option>
+  <option value="octave4">4</option>
+  <option value="octave5">5</option>
+  <option value="octave6">6</option>
 </select>
-</p>
+</form>
 
 <p>
   <div>
