--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -36,7 +36,7 @@
 <select id="octaves" name="Octave select">
   <option value="octave1">1</option>
   <option value="octave2">2</option>
-  <option value="octave3">3</option>
+  <option value="octave3" selected>3</option>
   <option value="octave4">4</option>
   <option value="octave5">5</option>
   <option value="octave6">6</option>
