--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -32,7 +32,7 @@
   <option value="keyBb">B♭</option>
   <option value="keyF" >F</option>
 </select><br><br>
-<label for="octaves">Choose an octave:</label>
+<label for="octaves">Choose a base octave:</label>
 <select id="octaves" name="Octave select">
   <option value="octave1">1</option>
   <option value="octave2">2</option>
