alec: small changes

--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -12,7 +12,7 @@
 <button id="startButton">start</button>
 <button id="stopButton">stop</button>
 <button id="enableTone">enable audio</button>
-<button id="randomize">randomize scale</button>
+<button id="randomize">randomize melody</button>
 <input id="play-pause" type="checkbox"><br>
 </p>
 
