alec: added key change button controls

--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -39,6 +39,12 @@
   <option value="octave4">4</option>
   <option value="octave5">5</option>
   <option value="octave6">6</option>
+</select><br><br>
+<label for="keySets">Choose a set of keys:</label>
+<select id="keySets" name="Key set select">
+  <option value="keySet0">1: C, A, Gb, Eb</option>
+  <option value="keySet1">2: G, E, Db, Bb</option>
+  <option value="keySet2">3: D, B, Ab, F</option>
 </select>
 </form>
 
