--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -9,10 +9,8 @@
 <h1>Hello. Press some buttons.</h1>
 
 <p>
-<button id="startButton">start</button>
-<button id="stopButton">stop</button>
-<button id="randomize">randomize melody</button>
-<input id="play-pause" type="checkbox"><br>
+<button id="randomize" class="button">randomize melody</button>
+<input id="play-pause" class="play-pause" type="checkbox"><br>
 </p>
 
 <form>
@@ -52,22 +50,22 @@
   <div>
     <label for="noteCount">melody length (applies to new scales):</label><br>
     <input id="noteCount" type="range" value="16" min="16" max="256" step="8">
-    <button id="noteCountReset">reset melody length</button>
+    <button id="noteCountReset" class="button">reset melody length</button>
   </div><br>
   <div>
     <label for="arpegg">arpeggio quantity:</label><br>
     <input id="arpegg" type="range" value="0.1" min="0" max="0.9" step="0.05">
-    <button id="arpeggReset">reset arpeggios</button>
+    <button id="arpeggReset" class="button">reset arpeggios</button>
   </div><br>
   <div>
     <label for="tempo">base tempo:</label><br>
     <input id="tempo" type="range" value="90" min="50" max="200" step="1">
-    <button id="tempoReset">reset tempo</button>
+    <button id="tempoReset" class="button">reset tempo</button>
   </div><br>
   <div>
     <label for="volume">base volume:</label><br>
     <input id="volume" type="range" value="0.5" min="0" max="2.5" step="0.05">
-    <button id="volumeReset">reset volume</button>
+    <button id="volumeReset" class="button">reset volume</button>
   </div>
 </p>
 
