--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -6,15 +6,21 @@
 <script src="node_modules/gamepad.js/gamepad.js"></script>
 <script>const { GamepadListener } = gamepad;</script>
 
-<h1>Hello. Press some buttons.</h1>
+<div class="title">
+<h1 class="title">Melodies of Chance (interactive!)</h1>
+</div>
 
-<p>
+<div>
 <button id="randomize" class="button">randomize melody</button>
+</div>
+
+<div class="play-pause">
+<label for="play-pause" class="label">Play</label>
 <input id="play-pause" class="play-pause" type="checkbox"><br>
-</p>
+</div>
 
 <form>
-<label for="keys">Choose a key:</label>
+<label for="keys" class="label">Choose a key:</label>
 <select id="keys" name="Key select">
   <option value="keyC" >C</option>
   <option value="keyG" >G</option>
@@ -29,7 +35,7 @@
   <option value="keyBb">B♭</option>
   <option value="keyF" >F</option>
 </select><br><br>
-<label for="octaves">Choose a base octave:</label>
+<label for="octaves" class="label">Choose a base octave:</label>
 <select id="octaves" name="Octave select">
   <option value="octave1">1</option>
   <option value="octave2">2</option>
@@ -38,7 +44,7 @@
   <option value="octave5">5</option>
   <option value="octave6">6</option>
 </select><br><br>
-<label for="keySets">Choose a set of keys:</label>
+<label for="keySets" class="label">Choose a set of keys:</label>
 <select id="keySets" name="Key set select">
   <option value="keySet0">1: C, A, Gb, Eb</option>
   <option value="keySet1">2: G, E, Db, Bb</option>
@@ -48,22 +54,22 @@
 
 <p>
   <div>
-    <label for="noteCount">melody length (applies to new scales):</label><br>
+    <label for="noteCount" class="label">melody length (applies to new scales):</label><br>
     <input id="noteCount" type="range" value="16" min="16" max="256" step="8">
     <button id="noteCountReset" class="button">reset melody length</button>
   </div><br>
   <div>
-    <label for="arpegg">arpeggio quantity:</label><br>
+    <label for="arpegg" class="label">arpeggio quantity:</label><br>
     <input id="arpegg" type="range" value="0.1" min="0" max="0.9" step="0.05">
     <button id="arpeggReset" class="button">reset arpeggios</button>
   </div><br>
   <div>
-    <label for="tempo">base tempo:</label><br>
+    <label for="tempo" class="label">base tempo:</label><br>
     <input id="tempo" type="range" value="90" min="50" max="200" step="1">
     <button id="tempoReset" class="button">reset tempo</button>
   </div><br>
   <div>
-    <label for="volume">base volume:</label><br>
+    <label for="volume" class="label">base volume:</label><br>
     <input id="volume" type="range" value="0.5" min="0" max="2.5" step="0.05">
     <button id="volumeReset" class="button">reset volume</button>
   </div>
