alec: centering controls

--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -10,14 +10,16 @@
 <h1 class="title">Melodies of Chance (interactive!)</h1>
 </div>
 
-<div>
-<button id="randomize" class="button">randomize melody</button>
+<div class="top-control">
+  <div class="top-control">
+    <button id="randomize" class="button">randomize melody</button>
+  </div>
+  <div class="play-pause">
+    <label for="play-pause" class="label">Play</label>
+    <input id="play-pause" class="play-pause" type="checkbox"><br>
+  </div>
 </div>
 
-<div class="play-pause">
-<label for="play-pause" class="label">Play</label>
-<input id="play-pause" class="play-pause" type="checkbox"><br>
-</div>
 
 <form>
 <label for="keys" class="label">Choose a key:</label>
