alec: coming along

--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -49,9 +49,9 @@
   </select><br><br>
   <label for="keySets" class="label">Choose a set of keys:</label>
   <select id="keySets" name="Key set select">
-    <option value="keySet0">1: C, A, Gb, Eb</option>
-    <option value="keySet1">2: G, E, Db, Bb</option>
-    <option value="keySet2">3: D, B, Ab, F</option>
+    <option value="keySet0">C, A, Gb, Eb</option>
+    <option value="keySet1">G, E, Db, Bb</option>
+    <option value="keySet2">D, B, Ab, F</option>
   </select>
   </form>
   </div>
