--- a/instrument-experimental/index.html
+++ b/instrument-experimental/index.html
@@ -1,4 +1,3 @@
-<!-- <script src="experiment.js"></script> -->
 <link rel="stylesheet" href="index.css">
 <script src="https://cdn.jsdelivr.net/gh/netizenorg/netnet-standard-library/build/nn.min.js"></script>
 <script src="https://tonejs.github.io/build/Tone.js"></script>
@@ -103,6 +102,10 @@
     <b>Right stick horizontal:</b> ping-pong delay<br>
 
   </p>
+</div>
+
+<div class="credits">
+  <p class="credits"><a class="credits" href="https://github.com/abargher/maad22506">view the source code here!</a></p>
 </div>
 
 <script type="module" src="experiment.js"></script>
