--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </div>
 
 <div class="credits">
-  <p class="credits"><a class="credits" href="https://github.com/abargher/maad22506">view the source code here!</a></p>
+  <p class="credits"><a class="credits" href="https://github.com/abargher/maad22506/tree/website">view the source code here!</a></p>
 </div>
 
 <script type="module" src="experiment.js"></script>
