alec: much better button alignment

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <div class="left-control">
     <div class="play-pause">
       <label for="play-pause" class="label">Play (Start)</label>
-      <input id="play-pause" class="play-pause" type="checkbox">
-    </div>
-    <div class="randomize">
-      <button id="randomize" class="button">randomize melody</button>
+      <input id="play-pause" class="play-pause" type="checkbox"><br>
+      <div class="randomize">
+        <button id="randomize" class="button">randomize melody</button>
+      </div>
     </div>
   </div>
   <div class="key-form">
